--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         <activity android:name="com.chan_wen.app.player.VideoPlayerPageActivity" />
         <provider
             android:name="cn.bmob.v3.util.BmobContentProvider"
-            android:authorities="com.open.sample.BmobContentProvider"/>
+            android:authorities="com.chan_wen.app.BmobContentProvider"/>
 
     </application>
 
