--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ allprojects {
         jcenter { url "http://jcenter.bintray.com/" }
         //Bmob的maven仓库地址--必填
         maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
+        maven { url "https://jitpack.io" }
     }
 }
 
