--- a/example/build.gradle
+++ b/example/build.gradle
@@ -55,6 +55,6 @@ dependencies {
     implementation 'com.bm.photoview:library:1.4.1'
     api 'com.blankj:utilcode:1.3.6'
     implementation "com.android.support:cardview-v7:$rootProject.ext.supportVersion"
-
+    implementation 'com.github.ForgetAll:LoadingDialog:v1.1.2'
 }
 
