--- a/tv-recyclerview/build.gradle
+++ b/tv-recyclerview/build.gradle
@@ -3,24 +3,22 @@ apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 32
         versionName "1.1.0"
     }
-
     lintOptions {
         abortOnError false
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '28.0.3'
 }
 
 publish {
@@ -33,10 +31,10 @@ publish {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     api "com.android.support:recyclerview-v7:$rootProject.ext.supportVersion"
     api "com.android.support:support-v4:$rootProject.ext.supportVersion"
-    api ('com.alibaba.android:vlayout:1.2.8@aar') {
+    api('com.alibaba.android:vlayout:1.2.8@aar') {
         transitive = true
     }
 }
